# hybird_ins_cpp

./: .gitignore  CMakeLists.txt  ee.py  plot_dead_time.py  plot_pure_ins.py  testins.cpp
archive/: example_complete.cpp  fgo_sim_test.cpp  fgo_test.cpp  smooth_demo.cpp  strategy_compare.cpp  theory_test.cpp
doc/: Paper_Revision_Plan.md  Physical_Drift_Modeling.md  README.md  atom_gyro_smoothing.md  fgo_experiments.md  optimal_params.md  paper.tex
include/Eigen/: CMakeLists.txt
psins/: CMakeLists.txt  earth.cpp  earth.h  glv.cpp  glv.h  ins_math.cpp  ins_math.h  ins_state.cpp  ins_state.h  ins_wrapper.h  kf_state.cpp  kf_state.h  sins_engine.cpp  sins_engine.h
src/: cai_sim.cpp  cai_sim.h  eskf_cai.h  example_minimal.cpp  experiment_app.cpp  experiment_app.h  fgo_core.cpp  fgo_core.h  fgo_main.cpp  fgo_module.h  main.cpp  smooth_demo.cpp  support.h  test copy.cpp  test.cpp  test_fgo.cpp  test_gtsam_logic.cpp
